tests/NormalTests/paczka1/small_fuzzy/78744846.err
Error in line 2: 9250 A115 18,5
Error in line 10: 19Or2k8 S131 85,8
